# resilient-edge-computing

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .vermin  GITLAB_RUNNER_SETUP.md  LICENSE  README.md  gitlab-runner-compose.yml  justfile  prek.toml  pyproject.toml  readme.md  requirements.txt  urban-compute-platform.py
client-testbed/: Dockerfile  README.md  dtn.kdl  dtn7god1.toml  dtn7god2.toml  dtn7rsd1.toml  dtn7rsd2.toml  entrypoint.sh
core-ndn/: Dockerfile  docker-compose.yml
core-ndn/dotcore/custom_services/: nfd.py  wasm_rest.py  wasm_rest_broker.py  wasm_rest_datastore.py  wasm_rest_executor.py
core-test-setups/: 2e2b.xml  simple.xml
rec/: broker.py  client.py  datastore.py  eid.py  errors.py  executor.py  job.py  log.py  messages.py  node.py  run.py  run_dtn.py  run_rest.py  storage.py
rec/dtn/: broker.py  client.py  datastore.py  eid.py  executor.py  job.py  messages.py  node.py  storage.py
rec/dtn/model/: eid.py
rec/nodes/: broker.py  client.py  datastore.py  executor.py
rec/nodes/brokers/: databroker.py  datastorecache.py  executorbroker.py
rec/nodes/zeroconf_listeners/: brokers.py  datastores.py
rec/nodetypes/: broker.py  client.py  datastore.py  executor.py  node.py
rec/rest/: job.py  model.py
rec/rest/nodes/: broker.py  client.py  datastore.py  executor.py  node.py
rec/rest/nodes/brokers/: databroker.py  datastorecache.py  executorbroker.py
rec/rest/nodes/zeroconf_listeners/: brokers.py  datastores.py
rec/rest/nodetypes/: broker.py  client.py  datastore.py  executor.py  node.py
rec/util/: exceptions.py  execute_wasm.py  fs.py  log.py
testbed/: Dockerfile  dtn.kdl  dtnd_broker.toml  dtnd_client.toml  dtnd_datastore.toml  dtnd_executor.toml  dtnd_go_broker.toml  dtnd_go_executor.toml  dtnd_rs_broker.toml  dtnd_rs_client.toml  dtnd_rs_datastore.toml  dtnd_rs_executor.toml  entrypoint.sh
tests/: conftest.py  test_broker.py  test_datastore.py  test_eid.py  test_executor.py  test_integration.py  test_job.py  test_messages.py  test_node.py  test_storage.py
tests/artifacts/: Dockerfile.integration-test  compose.integration-test.yml  wasi-smoke.wasm
tests/dtn/: conftest.py  test_broker.py  test_datastore.py  test_eid.py  test_executor.py  test_helpers.py  test_integration.py  test_job.py  test_messages.py  test_node.py  test_storage.py
tests/dtn/artifacts/: Dockerfile.integration-test  compose.integration-test.yml  wasi-smoke.wasm
tests/dtn/artifacts/execution_plans/: execution_plan_simple.toml  execution_plan_twice.toml  execution_plan_twice_named.toml
tests/dtn/artifacts/execution_plans/data/: infile.txt
tests/dtn/utils/: compose_env.py  helpers.py  integration_helpers.py  proc_helpers.py
tests/utils/: compose_env.py  helpers.py  integration_helpers.py  proc_helpers.py
tests/wasi-smoke/: Cargo.toml  README.md
tests/wasi-smoke/src/: main.rs
urban_compute_platform/: job.py  model.py  ucp.py
urban_compute_platform/nodes/: broker.py  client.py  datastore.py  executor.py  node.py
urban_compute_platform/nodes/brokers/: databroker.py  datastorecache.py  executorbroker.py
urban_compute_platform/nodes/clients/: job.py
urban_compute_platform/nodes/executors/: job.py
urban_compute_platform/nodes/listeners/: brokers.py  datastores.py
urban_compute_platform/nodes/zeroconf_listeners/: brokers.py  datastores.py
urban_compute_platform/nodetypes/: broker.py  client.py  datastore.py  executor.py  node.py
urban_compute_platform/util/: __init__.py  butterfly_selector.py  coral_selector.py  execute_wasm.py  fs.py  genetic_selector.py  log.py
wasm_rest/: .gitignore  README.md  requirements.txt  wasm_rest.py  wasm_rest_broker.py  wasm_rest_client.py  wasm_rest_database.py  wasm_rest_executor.py  wasm_rest_root_server.py  wasm_rest_server.py  zero.py
wasm_rest/wasm_rest/: exceptions.py  execute_wasm.py  model.py  ndn.py  util.py
wasm_rest/wasm_rest/client/: job.py  server.py
wasm_rest/wasm_rest/nodes/: broker.py  client.py  datastore.py  executor.py  node.py
wasm_rest/wasm_rest/nodes/brokers/: cache.py  databroker.py  datastorecache.py  executorbroker.py
wasm_rest/wasm_rest/nodes/clients/: job.py
wasm_rest/wasm_rest/nodes/executor/: job.py
wasm_rest/wasm_rest/nodes/executors/: job.py
wasm_rest/wasm_rest/nodes/listeners/: brokers.py  datastores.py
wasm_rest/wasm_rest/nodetypes/: broker.py  client.py  datastore.py  executor.py  node.py
wasm_rest/wasm_rest/server/: broker.py  database.py  executor.py  job.py
wasm_rest/wasm_rest/util/: __init__.py  execute_wasm.py  log.py  logging.py  util.py
