[project]
name = "rec"
version = "0.1.0"
description = "Run jobs in a distributed, resilient local execution network."
readme = "README.md"
requires-python = ">= 3.12"
license = "MIT"
authors = [
    { name = "Philipp Jahn", email = "jahnp@students.uni-marburg.de" },
    { name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de" },
    { name = "Leon Wimbes", email = "wimbes@students.uni-marburg.de" },
]
maintainers = [
    { name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    # WASM execution support
    "wasmtime>=42.0.0",
    # Message serialization
    "ormsgpack>=1.12.2",
    # Datastore
    "async-tinydb>=1.7.3",
    "aiofiles>=25.1.0",
    "aiorwlock>=1.5.1",
    # System monitoring
    "psutil>=7.2.2",
    # Misc
    "tomlkit>=0.14.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "ruff>=0.15.6",
    # Newer Versions of ty currenty struggle with hypothesis
    # https://github.com/astral-sh/ty/issues/2759
    "ty==0.0.14",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.151.9",
]

[project.urls]
Repository = "https://github.com/umr-ds/resilient-edge-computing"
Issues = "https://github.com/umr-ds/resilient-edge-computing/issues"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project.scripts]
rec = "rec.run:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = [
    "I", # Import-related checks
]

[tool.ty.rules]
invalid-context-manager = "ignore" # aiorwlock doen't implement __aenter__/__aexit__ correctly
