[project]
name = "rec"
version = "0.1.0"
description = "Run jobs in a distributed, resilient local execution network."
readme = "README.md"
requires-python = ">= 3.12"
license = "MIT"
authors = [
    { name = "Philipp Jahn", email = "jahnp@students.uni-marburg.de" },
    { name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de" },
    { name = "Leon Wimbes", email = "wimbes@students.uni-marburg.de" },
]
maintainers = [
    { name = "Markus Sommer", email = "msommer@informatik.uni-marburg.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    # WASM execution support
    "wasmtime>=42.0.0",
    # Message serialization
    "ormsgpack>=1.12.2",
    # Datastore
    "async-tinydb>=1.7.3",
    "aiofiles>=25.1.0",
    # System monitoring
    "psutil>=7.2.2",
    # Misc
    "tomlkit>=0.14.0",
    "vermin>=1.8.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "ruff>=0.15.6",
    "ty==0.0.25",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.151.9",
]

[project.urls]
Repository = "https://github.com/umr-ds/resilient-edge-computing"
Issues = "https://github.com/umr-ds/resilient-edge-computing/issues"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project.scripts]
rec = "rec.run:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ASYNC240", # we use aiofiles for asynchronous I/O.
    "E501", # we no longer live in a world of 80 character terminals.
    "S311", # we don't do cryptography
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ANN002",
    "ANN003",
    "FBT",
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "S",
] # Tests are just a bit special...
"rec/eid.py" = ["PLC0415"] # avoiding circular import

[tool.ty.rules]
all = "error"
